# js-contrib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  docker-dev.yml
contribs/: README.md
contribs/FnoHydro/: CMakeLists.txt  README.md
contribs/FnoHydro/config/: fno_bulk_test.xml  fno_bulk_test_hydro.xml  fno_jet_test.xml  fno_jet_test_hydro.xml  jetscape_user_root_bulk_test.xml
contribs/FnoHydro/example/: BulkFnoRooIn.cc  CMakeLists.txt  JetFnoRooIn.cc  bulkAna.cc  fnoHydroTest.cc  fnoRooInTest.cc  jetAna.cc  simpleReaderAna.cc
contribs/FnoHydro/models/: README.md
contribs/FnoHydro/root_bulk/: CMakeLists.txt  JetScapeRootBulkLinkDef.h  bulkRootWriter.cc  bulkRootWriterFull.cc  bulkTest.cc
contribs/FnoHydro/src/: FnoHydro.cc  FnoHydro.h  FnoHydro_beta.cc  FnoHydro_beta.h  FnoModuleLinkDef.h  FnoRooIn.cc  FnoRooIn.h  FnoRooIn_beta.cc  FnoRooIn_beta.h  PGunFno.cc  PGunFno.h
contribs/PyJetscape/: CMakeLists.txt  README.md  pyproject.toml  setup.py
contribs/PyJetscape/conda_install/: install_js_fno_build_pinned.sh  install_js_fno_minimal.sh  install_js_fno_pinned.sh  test_js_fno_build_env.sh
contribs/PyJetscape/example/: inspect_bulk_info.py  per_event_loop.py  python_bulk_root_writer.py  python_fno_test.py
contribs/PyJetscape/python/jetscape/: __init__.py  bulk_root_writer.py  fno_hydro.py  run_jetscape.py  utils.py
contribs/PyJetscape/src/: bind_evolution.cc  bind_fluid_dynamics.cc  bind_framework.cc  bind_initial_state.cc  bind_jet.cc  bind_music.cc  bind_signal_manager.cc  pyjetscape_core.cc
contribs/Visualization/: .gitignore  PlanVisualization.md  README.md  hydro_jet_pyvista.py  hydro_pyvista.py
contribs/Visualization/config/: OO_one_event.xml  OO_one_event_jet.xml
contribs/conda_install/: install_js_fno_build_minimal.sh
utils/: BuildContainerDev.md  Dockerfile.dev  Dockerfile.dev.blackwell  PlanContainer.md  PlanContainerDev.md  configure.sh
